# whisp-rs

./: .gitignore  Cargo.toml  build.rs  cbindgen.toml
.github/workflows/: build.yml  release.yml
java/: settings.gradle.kts
java/lib/: build.gradle.kts
java/lib/src/main/java/org/mcaccess/whisprs/: BrailleBackendMetadata.java  SpeechResult.java  SpeechSynthesizerMetadata.java  Voice.java  Whisprs.java
java/lib/src/main/java/org/mcaccess/whisprs/audio/: SpeechResult.java
java/lib/src/main/java/org/mcaccess/whisprs/error/: AudioDataNotSupportedException.java  BackendNotFoundException.java  BrailleFailedException.java  BrailleNotSupportedException.java  InitializeFailedException.java  InvalidParameterException.java  InvalidPitchException.java  InvalidRateException.java  InvalidVolumeException.java  LanguageNotFoundException.java  NoBackendsException.java  NoBrailleBackendsException.java  NoVoicesException.java  SpeakFailedException.java  SpeechNotSupportedException.java  StopSpeechFailedException.java  UnknownException.java  VoiceNotFoundException.java
java/lib/src/main/java/org/mcaccess/whisprs/metadata/: BrailleBackendMetadata.java  SpeechSynthesizerMetadata.java  Voice.java
nvda_controller/: client.cpp  nvdaController.h  winIPCUtils.cpp
src/: audio.rs  av_speech_synthesizer.rs  c_api.rs  error.rs  espeak_ng.rs  jaws.rs  jni.rs  lib.rs  main.rs  metadata.rs  nvda.rs  one_core.rs  output.rs  sapi.rs  speech.rs  speech_dispatcher.rs  speech_synthesizer.rs
src/backends/: av_speech_synthesizer.rs  espeak_ng.rs  jaws.rs  mod.rs  nvda.rs  one_core.rs  sapi.rs  speech_dispatcher.rs
