[package]
name = "audio-navigation-tts"
version = "0.1.0"
authors = ["Elijah Massey <emassey0135@gmail.com>"]
description = "A JNI library to expose several TTS systems to the Audio Navigation Minecraft mod"
homepage = "https://github.com/emassey0135/audio-navigation-tts"
repository = "https://github.com/emassey0135/audio-navigation-tts"
license = "GPL-3.0"
edition = "2021"

[dependencies]
espeakng-sys = { git = "https://github.com/emassey0135/espeakng-sys.git", version = "0.3.0", features = ["clang-runtime"] }
jni = "0.21.1"
lazy_static = "1.5.0"

[target.'cfg(windows)'.dependencies]
sapi-lite = "0.1.1"
windows = { version = "0.28", features = ["Win32_System_Com"] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
build-target = "0.4.0"
