[package]
name = "audio-navigation-tts"
version = "0.3.1"
authors = ["Elijah Massey <emassey0135@gmail.com>"]
description = "A JNI library to expose several TTS systems to the Audio Navigation Minecraft mod"
homepage = "https://github.com/emassey0135/audio-navigation-tts"
repository = "https://github.com/emassey0135/audio-navigation-tts"
license = "GPL-3.0"
edition = "2021"

[dependencies]
espeakng-sys = { git = "https://github.com/emassey0135/espeakng-sys.git", version = "0.3.0", features = ["clang-runtime"] }
jni = "0.21.1"
lazy_static = "1.5.0"
rodio = "0.20.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
block2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = ["std", "NSArray", "NSEnumerator", "NSRunLoop", "NSString"] }
objc2-avf-audio = { version = "0.3.1", default-features = false, features = ["AVAudioBuffer", "AVAudioFormat", "AVAudioTypes", "AVSpeechSynthesis", "block2", "objc2-core-audio-types", "std"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Media_Core", "Media_SpeechSynthesis", "Storage_Streams", "Win32_Globalization", "Win32_Media_Audio", "Win32_Media_Speech", "Win32_System_Com", "Win32_System_SystemServices", "Win32_System_WinRT", "Win32_UI_Shell"] }
quick-xml = "0.37.5"

[lib]
crate-type = ["cdylib", "lib"]

[build-dependencies]
build-target = "0.4.0"
