[package]
name = "whisp-rs"
version = "0.4.0"
authors = ["Elijah Massey <emassey0135@gmail.com>"]
description = "A TTS library that lets applications use numerous TTS engines and screen readers on multiple platforms from one simple interface"
homepage = "https://github.com/minecraft-access/whisp-rs"
repository = "https://github.com/minecraft-access/whisp-rs"
license = "GPL-3.0"
edition = "2021"

[dependencies]
espeakng-sys = { git = "https://github.com/emassey0135/espeakng-sys.git", version = "0.3.0", features = ["clang-runtime"] }
jni = "0.21.1"
lazy_static = "1.5.0"
rodio = { version = "0.20.1", default-features = false, features = ["wav", "hound"] }

[target.'cfg(target_os = "linux")'.dependencies]
ssip-client-async = "0.15.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
block2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = ["std", "NSArray", "NSEnumerator", "NSRunLoop", "NSString"] }
objc2-avf-audio = { version = "0.3.1", default-features = false, features = ["AVAudioBuffer", "AVAudioFormat", "AVAudioTypes", "AVSpeechSynthesis", "block2", "objc2-core-audio-types", "std"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Media_Core", "Media_SpeechSynthesis", "Storage_Streams", "Win32_Globalization", "Win32_Media_Audio", "Win32_Media_Speech", "Win32_System_Com", "Win32_System_Ole", "Win32_System_SystemServices", "Win32_System_Variant", "Win32_System_WinRT", "Win32_UI_Shell"] }
windows-core = "0.61.2"
quick-xml = "0.37.5"

[lib]
crate-type = ["cdylib", "lib"]

[build-dependencies]
build-target = "0.4.0"
